# sync-resume

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: __init__.py  archive_cleanup.py  cleanup.py  db.py  graph.py  loader.py  main.py  models.py  pdfExtractor.py  prompts.py  resume.py  schemas.py  unstructured.ipynb  vectordb.py
src/agents/: __init__.py  classify.py  graph.py
src/outputs/: __init__.py  candidates.py
src/prompts/: classify_prompts.py
src/routes/: resume.py
src/utils/: __init__.py  cleanup.py  combine.py  defs.py  emailer.py  etl.py  extract.py  helper.py  load.py  loader.py  normalizer.py  process.py  tmp.py  transform.py
src/utils/etl/: normalizer.py  run.py  transform.py
